Upload ETL Code v2

--- a/ETL Code/APAN_5400_Project_ETL.ipynb
+++ b/ETL Code/APAN_5400_Project_ETL.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cb4993da",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,8 @@
     "import pandas as pd\n",
     "import random\n",
     "import requests\n",
-    "import json"
+    "import json\n",
+    "import shutil"
    ]
   },
   {
@@ -158,7 +159,13 @@
    "source": [
     "### Select random dataset from Openlibrary dataset\n",
     "\n",
-    "Due to an enormous size of record from Openlibrary dataset, we randomly select record from dataset to clean, extract and load to our database (MongoDB and ElasticSearch)."
+    "Due to an enormous size of record from Openlibrary dataset, we randomly select record from dataset to clean, extract and load to our database (MongoDB and ElasticSearch).\n",
+    "\n",
+    "Work : 24 Million records\n",
+    "\n",
+    "Edition : 34 Million records\n",
+    "\n",
+    "Authors : 8 Million records"
    ]
   },
   {
@@ -416,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7d3860cc",
    "metadata": {},
    "outputs": [],
@@ -458,19 +465,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "579ea361",
    "metadata": {},
    "outputs": [],
    "source": [
     "collection1 = db.works\n",
-    "collection1.insert_many(jdata1)\n",
+    "#collection1.insert_many(jdata1)\n",
     "\n",
     "collection2 = db.editions\n",
-    "collection2.insert_many(jdata2)\n",
+    "#collection2.insert_many(jdata2)\n",
     "\n",
     "collection3 = db.authors\n",
-    "collection3.insert_many(jdata3)"
+    "#collection3.insert_many(jdata3)"
    ]
   },
   {
@@ -548,22 +555,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d765acc8",
+   "id": "0dca7164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "author_result = collection3.find ()\n",
+    "author_list = []\n",
+    "\n",
+    "for record in author_result: \n",
+    "    author_list.append(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b724de34",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_author_name = []\n",
     "mil = 1\n",
-    "with open('ol_dump_authors_2022-03-02.txt') as bigfile:\n",
-    "    for lineno, line in enumerate(bigfile):\n",
-    "        index_cut = line.find(\"{\")\n",
-    "        line1 = line[index_cut:]\n",
-    "        json1 = json.loads(line1)\n",
+    "for author in author_list:\n",
     "        try:\n",
-    "            json1['name']\n",
+    "            author['name']\n",
     "            line_app = {}\n",
-    "            line_app['key'] = json1['key']\n",
-    "            line_app['author'] = json1['name']\n",
+    "            line_app['key'] = author['key']\n",
+    "            line_app['author'] = author['name']\n",
     "            all_author_name.append(line_app)\n",
     "            if lineno % 1000000 == 0: #Check Progress by print every million line\n",
     "                print(mil)\n",
@@ -632,9 +649,9 @@
     "    except: pass\n",
     "    line_app['number_of_pages'] = edition['number_of_pages']\n",
     "    line_app['isbn_13'] = isbn13\n",
-    "    line_app['NYT_bestseller'] = BinarySearch(nyt_content_list, isbn13)\n",
+    "    line_app['NYT_bestseller'] = BinarySearch(nyt_content_list, isbn13) #Search whether the books is New York Time Best Seller or not?\n",
     "    if author in set_list_all_author_name_key:\n",
-    "        index = list_all_author_name_key.index(author)\n",
+    "        index = list_all_author_name_key.index(author) #Search index of Author name by Author Key\n",
     "        line_app['author'] = list_all_author_name_author[index]\n",
     "    if mil % 1000 == 0: #Check Progress by print every million line\n",
     "        print(mil)\n",
@@ -723,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0d2be86d",
    "metadata": {},
    "outputs": [],
@@ -736,7 +753,7 @@
     "isbn_list = []\n",
     "\n",
     "# preparing 1000 isbn for image retrieval\n",
-    "for i in range(1000): \n",
+    "for i in range(60,70): \n",
     "    isbn_list.append(result[i]['isbn_13'])\n"
    ]
   },
@@ -750,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "320de6c7",
    "metadata": {},
    "outputs": [],
@@ -776,6 +793,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8b8c272e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the function, download those pictures locally\n",
+    "download_image()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "94cc688c",
    "metadata": {},
@@ -785,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9a6f63b4",
    "metadata": {},
    "outputs": [],
@@ -808,6 +836,14 @@
     "    #Now store/put the image via GridFs object.\n",
     "    image.put(contents, filename=file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8d8a380",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
